<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_small">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_serial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_number">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_device_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_serial"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>


    <ProgressBar
        android:id="@+id/progress_add_patient"
        android:layout_width="@dimen/login_progress_bar"
        android:layout_height="@dimen/login_progress_bar"
        android:layout_below="@id/layout_serial"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/btn_add"
        style="@style/NormalButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/add" />


</RelativeLayout>