<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/img_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:padding="@dimen/spacing_medium"
        android:src="@drawable/logo_white_text"

        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_header"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:id="@+id/txt_login_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_login_using_the_id_provided_to_you_by_cardiodiagnostics"

            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_id_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_login_label"
            android:layout_marginTop="@dimen/spacing_large">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/doctor_id"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/NormalButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/login" />

        <ProgressBar
            android:id="@+id/progress_login"
            android:layout_width="@dimen/login_progress_bar"
            android:layout_height="@dimen/login_progress_bar"
            android:layout_below="@+id/edt_id_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_large" />

        <TextView
            android:id="@+id/txt_login_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_id_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/there_was_an_error_trying_to_sign_in_please_try_again"
            android:textColor="@color/colorFailure" />

    </RelativeLayout>


</RelativeLayout>